# ki-anwendung

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: format.py
src/control/: __init__.py
src/py/control/: main.py  model_type.py  object_detector.py  performance_evaluator.py  robomaster_vision_control.py  robot_controller.py
