[tool.poetry]
name = "robomaster-vision"
version = "0.1.0"
description = "A Python-based object detection system using YOLOv5 and RoboMaster SDK."
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"  # Specify the Python version your project supports

# Core dependencies
build = "1.2.2.post1"
click = "8.1.7"
colorama = "0.4.6"
imageio = "2.35.1"
importlib-metadata = "8.5.0"
MyQR = "2.3.1"
netaddr = "1.3.0"
netifaces = "0.11.0"
numpy = "1.24.4"
opencv-python = "4.5.4.60"
packaging = "24.2"
pillow = "10.4.0"
pip-tools = "7.4.1"
pyproject-hooks = "1.2.0"
robomaster = "0.1.1.68"
tomli = "2.2.1"
zipp = "3.20.2"

# Add YOLOv5 and its dependencies
torch = "^1.9.0"  # Ensure compatibility with YOLOv5
ultralytics = "8.0.0"  # YOLOv5 is now part of the ultralytics package

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
